--- a/stop/see_data/templates/page/analysis.html
+++ b/stop/see_data/templates/page/analysis.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/cfeddde540.js" crossorigin="anonymous"></script>
     <title>STOP! CRIME!</title>
 </head>
-<body background="https://cdn.pixabay.com/photo/2016/11/27/21/42/stock-1863880_1280.jpg">
+<body background="https://velog.velcdn.com/images%2Fskila%2Fpost%2F7000ebd9-a067-4b63-84c6-83d950d2c0df%2Fvisual%20analyse.gif">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     {% include "page/navbar.html" %}
     <br>
