--- a/stop/see_data/templates/page/cause_of.html
+++ b/stop/see_data/templates/page/cause_of.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />
+    <!-- 카테고리 css 적용 -->
     <link rel="stylesheet" href="{% static 'css/catagory.css' %}"/>
     <script src="{% static 'js/scripts.js'%}" type="text/javascript"></script>
     <link href="{% static 'bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
@@ -11,6 +12,7 @@
     <script src="https://kit.fontawesome.com/cfeddde540.js" crossorigin="anonymous"></script>
     <title>STOP! CRIME!</title>
 </head>
+<!-- 뒷배경 설정 -->
 <body background="https://cdn.pixabay.com/photo/2016/11/27/21/42/stock-1863880_1280.jpg">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     {% include "page/navbar.html" %}
