--- a/stop/see_data/templates/page/navbar.html
+++ b/stop/see_data/templates/page/navbar.html
@@ -1,4 +1,4 @@
-<!-- 내비게이션 바 -->
+
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container px-4 px-lg-5 mt-3">
             <div class="d-md-flex justify-content-md-end ms-auto">
@@ -7,17 +7,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="expand">
                     <div class="justify-content-start">
-                        <div class="navbar-nav" style="color: #000000; font-size: 1.5rem;"> <!-- 폰트 사이즈 조절 및 색깔 지정-->
+                        <div class="navbar-nav" style="color: #000000; font-size: 1.5rem;">
                             <a href="{% url 'main_page' %}" class="nav-item nav-link">홈</a>
                             <a href="{% url 'detail_page' %}" class="nav-item nav-link">자료실</a>
-                            <ul class="navbar-nav ">
-                            <li class="nav-item dropdown"> <!-- 드롭다운 버튼 -->
+                            <ul class="navbar-nav "> <!-- ms-auto: 왼쪽으로 가능한 한 최대치 여백 확보-->
+                            <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">카테고리</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="{% url 'cause_of_page' %}">발생 요인</a></li>
                                     <li><a class="dropdown-item" href="{% url 'preventive_page' %}">예방 요인</a></li>
                                     <li><a class="dropdown-item" href="{% url 'analysis_page' %}">회귀 분석</a></li>
-                                    <li><hr class="dropdown-divider"></li> <!-- 드롭다운 선으로 나눠주기 -->
+                                    <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="https://news.seoul.go.kr/citybuild/files/2013/05/5180e1e89fd823.67754200.pdf">"CPTED"...</a></li>
                                     <li><a class="dropdown-item" href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART001047795">CCTV 의 범죄예방...</a></li>
                                     <li><a class="dropdown-item" href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002171708">CPTED 범죄예방...</a></li>
@@ -30,7 +30,6 @@
                         </div>
 
                     </div>
-                    <!-- 인스타 -->
                     <form class="d-flex d-md-flex justify-content-md-end">
                         <button class="btn btn float-right">
                             <a class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"
@@ -38,11 +37,10 @@
                             </a>
                         </button>
                     </form>
-                    <!-- 이메일 문의 -->
                     <form class="d-flex">
                         <button class="btn btn float-right">
                             <a class="fa-regular fa-envelope fa-2xl" style="color: #ffffff;"
-                               href="#" target="_blank" >
+                               href="{% url 'ask_page' %}" target="_blank" >
                             </a>
                         </button>
                     </form>
