--- a/stop/see_data/templates/page/analysis.html
+++ b/stop/see_data/templates/page/analysis.html
@@ -15,22 +15,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     {% include "page/navbar.html" %}
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <section>
-        <div class="container">
-            <div class="container">
-                <div class="row">
-                    <iframe src="https://public.tableau.com/shared/8FJ79BD6Z?:embed=yes&:showVizHome=no"
-                       width = "1000" height ="1000">
-                    </iframe>
-                </div>
-                <br>
-            </div>
+    <div class="container">
+        <div class="col-10">
+            <iframe src="https://public.tableau.com/views/_16956204728490/sheet7?:embed=yes&:showVizHome=no"
+             width = "600" height ="600">
+            </iframe>
         </div>
-    </section>
+    </div>
+
+
     {% include "page/footer.html" %}
 </body>
 </html>
