--- a/stop/see_data/templates/page/preventive.html
+++ b/stop/see_data/templates/page/preventive.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="container">
                 <div class="row">
-                    <iframe src="https://public.tableau.com/shared/8FJ79BD6Z?:embed=yes&:showVizHome=no"
+                    <iframe src="https://public.tableau.com/views/ko1_16956125621580/sheet28?:embed=yes&:showVizHome=no"
                        width = "1000" height ="1000">
                     </iframe>
                 </div>
