내비게이션바 수정 도메인 연결중

--- a/stop/see_data/templates/page/footer.html
+++ b/stop/see_data/templates/page/footer.html
@@ -1,5 +1,13 @@
-<footer class="py-5 bg-dark sticky">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
-    </div>
-</footer>
+<center>
+    <footer class="py-5 bg-dark sticky">
+        <div class="container">
+            <button class="btn btn">
+                <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023 | 대한민국 경찰청 공식 인스타 |
+                    <a class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"
+                 href="https://www.instagram.com/police_kor_official/" target="_blank" >
+                </a>
+                </p>
+            </button>
+        </div>
+    </footer>
+</center>
