--- a/stop/see_data/templates/page/analysis.html
+++ b/stop/see_data/templates/page/analysis.html
@@ -14,18 +14,22 @@
 <body background="https://velog.velcdn.com/images%2Fskila%2Fpost%2F7000ebd9-a067-4b63-84c6-83d950d2c0df%2Fvisual%20analyse.gif">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     {% include "page/navbar.html" %}
+
     <br>
     <br>
     <br>
     <br>
     <br>
+
     <section>
         <div class="container">
             <div class="container">
                 <div class="row">
-                    <iframe src="https://public.tableau.com/shared/Q3PCQ4H2Y?:embed=yes&:showVizHome=no"
-                       width = "1000" height ="1000">
-                    </iframe>
+                    <p align = "middle">
+                        <iframe src="https://public.tableau.com/views/_16957752574540/sheet9?:embed=yes&:showVizHome=no"
+                           width = "850" height ="850" allowfullscreen>
+                        </iframe>
+                    </p>
                 </div>
                 <br>
             </div>
