--- a/stop/see_data/templates/page/analysis.html
+++ b/stop/see_data/templates/page/analysis.html
@@ -3,10 +3,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="{% static 'css/catagory.css' %}"/>
-    <script src="{% static 'js/scripts.js'%}" type="text/javascript"></script>
-    <link href="{% static 'bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
+<!--    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />-->
+<!--    <link rel="stylesheet" href="{% static 'css/catagory.css' %}"/>-->
+<!--    <script src="{% static 'js/scripts.js'%}" type="text/javascript"></script>-->
+<!--    <link href="{% static 'bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">-->
     <!-- fontawesome 적용 코드-->
     <script src="https://kit.fontawesome.com/cfeddde540.js" crossorigin="anonymous"></script>
     <title>STOP! CRIME!</title>
