--- a/stop/see_data/templates/page/ask_page.html
+++ b/stop/see_data/templates/page/ask_page.html
@@ -3,10 +3,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="{% static 'css/catagory.css' %}"/>
-    <script src="{% static 'js/scripts.js'%}" type="text/javascript"></script>
-    <link href="{% static 'bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
+<!--    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />-->
+<!--    <link rel="stylesheet" href="{% static 'css/catagory.css' %}"/>-->
+<!--    <script src="{% static 'js/scripts.js'%}" type="text/javascript"></script>-->
+<!--    <link href="{% static 'bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">-->
     <!-- fontawesome 적용 코드-->
     <script src="https://kit.fontawesome.com/cfeddde540.js" crossorigin="anonymous"></script>
     <title>STOP! CRIME!</title>
@@ -64,6 +66,22 @@
         </div>
     </div>
         <!-- Footer-->
-    {% include "page/footer.html" %}
+<br>
+<br>
+<br>
+<br>
+<center>
+    <footer class="py-5 bg-dark sticky-bottom">
+        <div class="container">
+            <button class="btn btn">
+                <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023 | 대한민국 경찰청 공식 인스타 |
+                    <a class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"
+                 href="https://www.instagram.com/police_kor_official/" target="_blank" >
+                </a>
+                </p>
+            </button>
+        </div>
+    </footer>
+</center>
 </body>
 </html>
