--- a/stop/see_data/templates/page/cause_of.html
+++ b/stop/see_data/templates/page/cause_of.html
@@ -3,17 +3,19 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />
-    <!-- 카테고리 css 적용 -->
-    <link rel="stylesheet" href="{% static 'css/catagory.css' %}"/>
-    <script src="{% static 'js/scripts.js'%}" type="text/javascript"></script>
-    <link href="{% static 'bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-    <!-- fontawesome 적용 코드-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
+<!--    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />-->
+<!--    &lt;!&ndash; 카테고리 css 적용 &ndash;&gt;-->
+<!--    <link rel="stylesheet" href="{% static 'css/catagory.css' %}"/>-->
+<!--    <script src="{% static 'js/scripts.js'%}" type="text/javascript"></script>-->
+<!--    <link href="{% static 'bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">-->
+<!--    &lt;!&ndash; fontawesome 적용 코드&ndash;&gt;-->
     <script src="https://kit.fontawesome.com/cfeddde540.js" crossorigin="anonymous"></script>
     <title>STOP! CRIME!</title>
 </head>
 <!-- 뒷배경 설정 -->
-<body background="https://cdn.pixabay.com/photo/2016/11/27/21/42/stock-1863880_1280.jpg">
+<body background="https://velog.velcdn.com/images%2Fskila%2Fpost%2F7000ebd9-a067-4b63-84c6-83d950d2c0df%2Fvisual%20analyse.gif">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     {% include "page/navbar.html" %}
     <br>
