--- a/stop/see_data/templates/page/main_page.html
+++ b/stop/see_data/templates/page/main_page.html
@@ -3,10 +3,10 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="{% static 'css/catagory.css' %}"/>
-    <script src="{% static 'js/scripts.js'%}" type="text/javascript"></script>
-    <link href="{% static 'bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
+<!--    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />-->
+
     <!-- fontawesome 적용 코드-->
     <script src="https://kit.fontawesome.com/cfeddde540.js" crossorigin="anonymous"></script>
     <title>STOP! CRIME!</title>
@@ -37,7 +37,14 @@
                     <img src="https://mblogthumb-phinf.pstatic.net/MjAyMTA1MTNfMjU0/MDAxNjIwOTEwMjg1Mzcw.htCqwuMBUmne84FsLQ3GmKqalQFvPSk7WKg6p3EuLvkg.V0wmUGEV0nrBqLcrVPv4-mrFm0hYPsGJ0FYKq1YUynog.JPEG.fklir/IMG_7117.jpg?type=w800"
                          style="float:left; width:500px; height:400px">
                     <div class="text-center text-light" id="left-area"> <!-- 소개글 -->
-                        <p>소개글쓸거에요</p>
+                        <p style="background-color:gray;">
+                            - 본 페이지는 범죄예방효과(CEPTED)를 기반으로 <br/>
+                            다양한 환경요인이 범죄율에 어떠한 영향을 미치는지 분석한 사이트입니다.<br/><br/>
+                            - 기본적으로 참고문헌에서 언급하고 있는 CCTV, 안심 스카우트, 비상벨 등의 환경 요인은 범죄율을 줄이는 효과를 가져올 수 있다는 가설 하에 분석을 진행하였습니다.<br/><br/>
+                            - 쓰레기 발생량, 인구 수, 유흥업소의 수 등의 환경 요인은 범죄율을 증가시키는 효과를 가져올 수 있다는 가설 하에 분석을 진행하였습니다.<br/><br/>
+                            - 이에 따라 요인들을 아래와 같이 분류하고 데이터 시각화를 통해 다년간의 변화를 살펴보고 통계적 분석을 통해 결과를 도출하고, 예측하고자 하였습니다.<br/><br/>
+                            - 요인 : 5대 범죄 현황, 건물총수, 인구, 쓰레기 발생량, 유흥업소의 수, 안심 스카우트<br/><br/>
+                            - 회귀 분석의 경우 종속변수를 범죄율로 하고, 독립 변수를 인구, 쓰레기 발생량, CCTV, 스카우트 등으로 선정하여 각각 선형 회귀 분석을 실시하였습니다.</p>
                     </div>
                 </div>
             </div>
@@ -46,8 +53,8 @@
                 <div class="row">
                     <div class="card col-6" style="width: 40rem;">
                         <div class="card-body"> <!-- 그래프 넣을거임~ -->
-                            <iframe src = 'https://public.tableau.com/views/map1_4_16956299179020/1_1?:embed=yes&:showVizHome=no'
-                                    width = "585" height ="1000">
+                            <iframe src = 'https://public.tableau.com/views/map1_5_16957215290050/1_1?:embed=yes&:showVizHome=no'
+                                width = "585" height ="1000">
                             </iframe>
                         </div>
                     </div>
@@ -61,5 +68,6 @@
     <!-- 영상아래 새로운 컨테이너 -->
     </section>
     {% include "page/footer.html" %}
+
 </body>
 </html>
